# teleport

./: .gitignore  .gitlab-ci.yml  .gitmodules  README.md  com.frac_tion.teleport.json  meson.build  meson_post_install.py  org.gtk.teleportapp.json
data/: com.frac-tion.teleport.dektop.in  com.frac-tion.teleport.gschema.xml  com.frac_tion.teleport.appdata.xml.in  com.frac_tion.teleport.desktop.in  com.frac_tion.teleport.gschema.xml  meson.build  org.gtk.teleportapp.desktop.in  teleport.gresource.xml  teleportapp.gresource.xml
data/gtk/: menus.ui
data/icons/: meson.build
data/icons/hicolor/: meson.build
docs/: mvp
src/: .gitignore  Makefile  browser.c  browser.h  device_settings.ui  devicename  file_row.ui  get.c  get.h  glade.window.ui  gschemas.compiled  main.c  meson.build  org.gtk.paperplaneapp.gschema.xml  org.gtk.teleportapp.desktop  org.gtk.teleportapp.gschema.xml  paperplaneapp  paperplaneapp.c  paperplaneapp.gresource.xml  paperplaneapp.h  paperplaneappwin.c  paperplaneappwin.h  publish.c  publish.h  remote_list.ui  resources.c  server.c  server.h  settings.ui  style.css  teleport-app.c  teleport-app.h  teleport-avahi.c  teleport-avahi.h  teleport-browser.c  teleport-browser.h  teleport-client.h  teleport-file-row.c  teleport-file-row.h  teleport-file-utils.c  (+26 more)
